# Quake

./: .gitignore  CMakeLists.txt  CMakePresets.json  Quake.sln
QuakeGL/: CMakeLists.txt  QuakeGL.vcxproj  QuakeGL.vcxproj.filters  adivtab.h  anorm_dots.h  bspfile.h  cd_win.c  cd_win.cpp  cdaudio.h  chase.c  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_tent.c  cl_tent.cpp  client.h  cmd.c  cmd.cpp  cmd.h  common.c  common.cpp  common.h  conproc.c  conproc.cpp  conproc.h  console.c  console.cpp  console.h  crc.c  cvar.c  cvar.cpp  cvar.h  draw.h  gl.h  gl_draw.c  (+119 more)
QuakeHW/: CMakeLists.txt  QuakeHW.cpp  QuakeHW.rc  QuakeHW.vcxproj  QuakeHW.vcxproj.filters  Resource.h  adivtab.h  anorms.h  bspfile.h  cd_win.c  cd_win.cpp  cdaudio.h  chase.c  chase.cpp  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_tent.c  cl_tent.cpp  client.h  cmd.c  cmd.cpp  cmd.h  common.c  common.cpp  common.h  conproc.c  conproc.cpp  conproc.h  console.c  console.cpp  console.h  crc.c  crc.h  cvar.c  (+162 more)
common/: CMakeLists.txt  appapi.h  bspfile.h  cd_win.c  cd_win.cpp  cdaudio.h  chase.c  chase.cpp  chase.h  cl_demo.c  cl_demo.cpp  cl_demo.h  cl_input.c  cl_input.cpp  cl_input.h  cl_main.c  cl_main.cpp  cl_main.h  cl_parse.c  cl_parse.cpp  cl_parse.h  cl_tent.c  cl_tent.cpp  cl_tent.h  client.h  cmd.c  cmd.cpp  cmd.h  common.c  common.cpp  common.h  common_model.h  conproc.c  conproc.cpp  conproc.h  console.c  console.cpp  console.h  crc.c  crc.cpp  (+146 more)
progs_rebuild/: CMakeLists.txt  main.cpp
quake/: app.cpp  app.h  args.cpp  args.h  cvar.cpp  cvar.h  dll.h  keys.cpp  keys.h  lib_funcs.cpp  lib_funcs.h  main.c  memory.cpp  memory.h  mode.cpp  mode.h  quake.vcxproj  quake.vcxproj.filters  sys.cpp  sys.h
scitech/INCLUDE/: DEBUG.H  MGRAPH.H
