add_executable(QuakeGL WIN32
  "bspfile.h"
  "cd_win.cpp"
  "cdaudio.h"
  "chase.cpp"
  "cl_demo.cpp"
  "cl_input.cpp"
  "cl_main.cpp"
  "cl_parse.cpp"
  "cl_tent.cpp"
  "client.h"
  "cmd.cpp"
  "cmd.h"
  "common.cpp"
  "common.h"
  "conproc.cpp"
  "conproc.h"
  "console.cpp"
  "console.h"
  "crc.cpp"
  "crc.h"
  "cvar.cpp"
  "cvar.h"
  "draw.h"
  "gl_draw.cpp"
  "gl_mesh.cpp"
  "gl_model.cpp"
  "gl_model.h"
  "gl_refrag.cpp"
  "gl_rlight.cpp"
  "gl_rmain.cpp"
  "gl_rmisc.cpp"
  "gl_rsurf.cpp"
  "gl_screen.cpp"
  "gl_vidnt.cpp"
  "gl_warp.cpp"
  "glquake.h"
  "host.cpp"
  "host_cmd.cpp"
  "in_win.cpp"
  "input.h"
  "keys.cpp"
  "keys.h"
  "mathlib.cpp"
  "mathlib.h"
  "menu.cpp"
  "menu.h"
  "model.h"
  "modelgen.h"
  "net.h"
  "net_dgrm.cpp"
  "net_dgrm.h"
  "net_loop.cpp"
  "net_loop.h"
  "net_main.cpp"
  "net_vcr.cpp"
  "net_vcr.h"
  "net_win.cpp"
  "net_wins.cpp"
  "net_wins.h"
  "net_wipx.cpp"
  "net_wipx.h"
  "pr_cmds.cpp"
  "pr_comp.h"
  "pr_edict.cpp"
  "pr_exec.cpp"
  "progs.h"
  "protocol.h"
  "quakedef.h"
  "r_part.cpp"
  "render.h"
  "resource.h"
  "sbar.cpp"
  "sbar.h"
  "screen.h"
  "server.h"
  "snd_dma.cpp"
  "snd_mem.cpp"
  "snd_mix.cpp"
  "snd_win.cpp"
  "sound.h"
  "spritegn.h"
  "sv_main.cpp"
  "sv_move.cpp"
  "sv_phys.cpp"
  "sv_user.cpp"
  "sys.h"
  "sys_win.cpp"
  "vid.h"
  "view.cpp"
  "view.h"
  "wad.cpp"
  "wad.h"
  "winquake.h"
  "world.cpp"
  "world.h"
  "zone.cpp"
  "zone.h"
)

add_compile_definitions(QuakeGL PRIVATE
    GLQUAKE
    _CRT_SECURE_NO_WARNINGS
)

target_link_libraries(QuakeGL PRIVATE
  OpenGL::GL
  dxguid
  winmm
  wsock32
  comctl32
  quake::common
)
