cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)

set(this_target "QuakeHW")

project(${this_target})

set(${this_target}_sources
  #"pch.h"
  
  "bspfile.h"
  "cdaudio.h"
  "client.h"
  "cmd.h"
  "common.h"
  "conproc.h"
  "console.h"
  "crc.h"
  "cvar.h"
  "d_iface.h"
  "d_local.h"
  "draw.h"
  "input.h"
  "keys.h"
  "mathlib.h"
  "menu.h"
  "model.h"
  "modelgen.h"
  "net_dgrm.h"
  "net_loop.h"
  "net_vcr.h"
  "net_wins.h"
  "net_wipx.h"
  "net.h"
  "pr_comp.h"
  "progs.h"
  "protocol.h"
  "quakedef.h"
  "r_local.h"
  "r_shared.h"
  "render.h"
  "Resource.h"
  "sbar.h"
  "screen.h"
  "server.h"
  "sound.h"
  "spritegn.h"
  "sys.h"
  "vid.h"
  "view.h"
  "wad.h"
  "winquake.h"
  "world.h"
  "zone.h"

  "cd_win.cpp"
  "chase.cpp"
  "cl_demo.cpp"
  "cl_input.cpp"
  "cl_main.cpp"
  "cl_parse.cpp"
  "cl_tent.cpp"
  "cmd.cpp"
  "common.cpp"
  "conproc.cpp"
  "console.cpp"
  "crc.cpp"
  "cvar.cpp"
  "d_edge.cpp"
  "d_fill.cpp"
  "d_init.cpp"
  "d_modech.cpp"
  "d_part.cpp"
  "d_polyse.cpp"
  "d_scan.cpp"
  "d_sky.cpp"
  "d_sprite.cpp"
  "d_surf.cpp"
  "d_vars.cpp"
  "d_zpoint.cpp"
  "draw.cpp"
  "host_cmd.cpp"
  "host.cpp"
  "in_win.cpp"
  "keys.cpp"
  "mathlib.cpp"
  "menu.cpp"
  "model.cpp"
  "net_dgrm.cpp"
  "net_loop.cpp"
  "net_main.cpp"
  "net_vcr.cpp"
  "net_win.cpp"
  "net_wins.cpp"
  "net_wipx.cpp"
  "pr_cmds.cpp"
  "pr_edict.cpp"
  "pr_exec.cpp"
  "r_aclip.cpp"
  "r_alias.cpp"
  "r_bsp.cpp"
  "r_draw.cpp"
  "r_edge.cpp"
  "r_efrag.cpp"
  "r_light.cpp"
  "r_main.cpp"
  "r_misc.cpp"
  "r_part.cpp"
  "r_sky.cpp"
  "r_sprite.cpp"
  "r_surf.cpp"
  "r_vars.cpp"
  "sbar.cpp"
  "screen.cpp"
  "snd_dma.cpp"
  "snd_mem.cpp"
  "snd_mix.cpp"
  "snd_win.cpp"
  "sv_main.cpp"
  "sv_move.cpp"
  "sv_phys.cpp"
  "sv_user.cpp"
  "sys_win.cpp"
  "vid_win.cpp"
  "view.cpp"
  "wad.cpp"
  "world.cpp"
  "zone.cpp"
)

add_executable(${this_target} WIN32
  ${${this_target}_sources}
)

target_link_libraries(${this_target}
  PRIVATE
  dxguid
  winmm
  wsock32
)

#add_library(quake::gl ALIAS ${this_target})

#target_precompile_headers(${this_target} PRIVATE pch.h)
