add_executable(QuakeHW WIN32
    "bspfile.h"
    "cd_win.cpp"
    "cdaudio.h"
    "chase.cpp"
    "cl_demo.cpp"
    "cl_input.cpp"
    "cl_main.cpp"
    "cl_parse.cpp"
    "cl_tent.cpp"
    "client.h"
    "cmd.cpp"
    "cmd.h"
    "common.cpp"
    "common.h"
    "conproc.cpp"
    "conproc.h"
    "console.cpp"
    "console.h"
    "cvar.cpp"
    "cvar.h"
    "d_edge.cpp"
    "d_fill.cpp"
    "d_iface.h"
    "d_init.cpp"
    "d_local.h"
    "d_modech.cpp"
    "d_part.cpp"
    "d_polyse.cpp"
    "d_scan.cpp"
    "d_sky.cpp"
    "d_sprite.cpp"
    "d_surf.cpp"
    "d_vars.cpp"
    "d_zpoint.cpp"
    "draw.cpp"
    "draw.h"
    "host.cpp"
    "host_cmd.cpp"
    "in_win.cpp"
    "input.h"
    "keys.cpp"
    "keys.h"
    "mathlib.cpp"
    "mathlib.h"
    "menu.cpp"
    "menu.h"
    "model.cpp"
    "model.h"
    "modelgen.h"
    "net.h"
    "net_dgrm.cpp"
    "net_dgrm.h"
    "net_loop.cpp"
    "net_loop.h"
    "net_main.cpp"
    "net_vcr.cpp"
    "net_vcr.h"
    "net_win.cpp"
    "net_wins.cpp"
    "net_wins.h"
    "net_wipx.cpp"
    "net_wipx.h"
    "pch.h"
    "pr_cmds.cpp"
    "pr_comp.h"
    "pr_edict.cpp"
    "pr_exec.cpp"
    "progs.h"
    "protocol.h"
    "quakedef.h"
    "r_aclip.cpp"
    "r_alias.cpp"
    "r_bsp.cpp"
    "r_draw.cpp"
    "r_edge.cpp"
    "r_efrag.cpp"
    "r_light.cpp"
    "r_local.h"
    "r_main.cpp"
    "r_misc.cpp"
    "r_part.cpp"
    "r_shared.h"
    "r_sky.cpp"
    "r_sprite.cpp"
    "r_surf.cpp"
    "r_vars.cpp"
    "render.h"
    "Resource.h"
    "sbar.cpp"
    "sbar.h"
    "screen.cpp"
    "screen.h"
    "server.h"
    "snd_dma.cpp"
    "snd_mem.cpp"
    "snd_mix.cpp"
    "snd_win.cpp"
    "sound.h"
    "spritegn.h"
    "sv_main.cpp"
    "sv_move.cpp"
    "sv_phys.cpp"
    "sv_user.cpp"
    "sys.h"
    "sys_win.cpp"
    "vid.h"
    "vid_win.cpp"
    "view.cpp"
    "view.h"
    "wad.cpp"
    "wad.h"
    "winquake.h"
    "world.cpp"
    "world.h"
    "zone.cpp"
    "zone.h"
)

add_compile_definitions(QuakeHW PRIVATE
    _CRT_SECURE_NO_WARNINGS
)

target_precompile_headers(QuakeHW PRIVATE pch.h)

target_link_libraries(QuakeHW
  PRIVATE
  dxguid
  winmm
  wsock32
  quake::common
)
